@@ -19,7 +19,6 @@ package top.continew.starter.license.util;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.collection.CollectionUtil;
 import cn.hutool.core.io.FileUtil;
-import cn.hutool.core.io.IoUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import top.continew.starter.core.constant.StringConstants;
@@ -36,7 +35,12 @@ import java.net.InetAddress;
 import java.net.NetworkInterface;
 import java.net.SocketException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.attribute.PosixFilePermission;
+import java.nio.file.attribute.PosixFilePermissions;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.Enumeration;
 import java.util.Set;
 
@@ -84,9 +88,9 @@ public class ServerInfoUtils {
     /**
      * 初始化服务器硬件信息，并将信息缓存到内存
      *
-     * @throws Exception 例外
+     * @throws SocketException 获取网络接口信息失败
      */
-    private static void initServerInfos() throws Exception {
+    private static void initServerInfos() throws SocketException {
         if (ServerInfosContainer.ipAddress == null) {
             ServerInfosContainer.ipAddress = getIpAddress();
         }
@@ -108,6 +112,70 @@ public class ServerInfoUtils {
      */
     public static String getServerTempPath() {
         return System.getProperty("user.dir");
+    }
+
+    /**
+     * 在仅当前用户可访问的私有临时目录中创建脚本文件，避免共享临时目录下的脚本被其他用户篡改
+     *
+     * @param suffix  脚本文件后缀
+     * @param content 脚本内容
+     * @return 脚本文件
+     * @throws IOException 创建或写入文件失败
+     */
+    private static File createPrivateTempScript(String suffix, String content) throws IOException {
+        Path tempDir = createPrivateTempDirectory();
+        tempDir.toFile().deleteOnExit();
+        File script = createPrivateTempFile(tempDir, suffix).toFile();
+        script.deleteOnExit();
+        try (FileWriter fw = new FileWriter(script, StandardCharsets.UTF_8)) {
+            fw.write(content);
+        }
+        return script;
+    }
+
+    /**
+     * 在给定目录中创建临时脚本文件：POSIX 系统在创建时即限定属主可读写（rw-------），
+     * 非 POSIX 系统退回默认权限（文件位于属主独占目录内，同样受保护）
+     */
+    private static Path createPrivateTempFile(Path dir, String suffix) throws IOException {
+        try {
+            Set<PosixFilePermission> perms = EnumSet.of(PosixFilePermission.OWNER_READ,
+                PosixFilePermission.OWNER_WRITE);
+            return Files.createTempFile(dir, "hw-info", suffix,
+                PosixFilePermissions.asFileAttribute(perms));
+        } catch (UnsupportedOperationException e) {
+            return Files.createTempFile(dir, "hw-info", suffix);
+        }
+    }
+
+    /**
+     * 创建仅当前用户可访问（rwx------）的私有临时目录，避免共享临时目录下的脚本被其他用户读写
+     */
+    // S5443 针对 POSIX 世界可写临时目录：POSIX 分支已显式限定 rwx------；
+    // Windows 回退分支使用 %USERPROFILE%\AppData\Local\Temp，按用户 ACL 隔离、不存在世界可写问题
+    @SuppressWarnings("java:S5443")
+    private static Path createPrivateTempDirectory() throws IOException {
+        try {
+            Set<PosixFilePermission> perms = EnumSet.of(PosixFilePermission.OWNER_READ,
+                PosixFilePermission.OWNER_WRITE, PosixFilePermission.OWNER_EXECUTE);
+            return Files.createTempDirectory("continew-license-",
+                PosixFilePermissions.asFileAttribute(perms));
+        } catch (UnsupportedOperationException e) {
+            return Files.createTempDirectory("continew-license-");
+        }
+    }
+
+    /**
+     * 获取 Windows 脚本宿主 cscript 的绝对路径，避免依赖可被篡改的 PATH 环境变量
+     *
+     * @return cscript 可执行文件路径
+     */
+    private static String getWindowsCscriptPath() {
+        String systemRoot = System.getenv("SystemRoot");
+        if (systemRoot == null || systemRoot.isBlank()) {
+            systemRoot = "C:\\Windows";
+        }
+        return systemRoot + "\\System32\\cscript.exe";
     }
 
     /**
@@ -136,27 +204,25 @@ public class ServerInfoUtils {
     private static String getLinuxCpuSerial() {
         String result = StringConstants.EMPTY;
         String cpuIdCmd = "dmidecode";
-        BufferedReader bufferedReader = null;
+        // 使用绝对路径调用 shell，避免依赖可被篡改的 PATH 环境变量
         try {
-            // 管道
-            Process p = Runtime.getRuntime().exec(new String[] {"sh", "-c", cpuIdCmd});
-            bufferedReader = new BufferedReader(
-                new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8));
-            String line = null;
-            int index = -1;
-            while ((line = bufferedReader.readLine()) != null) {
-                // 寻找标示字符串[hwaddr]
-                index = line.toLowerCase().indexOf("uuid");
-                if (index >= 0) {
-                    // 取出mac地址并去除2边空格
-                    result = line.substring(index + "uuid".length() + 1).trim();
-                    break;
+            Process p = Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", cpuIdCmd});
+            try (BufferedReader bufferedReader = new BufferedReader(
+                new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
+                String line;
+                int index;
+                while ((line = bufferedReader.readLine()) != null) {
+                    // 寻找标示字符串[uuid]
+                    index = line.toLowerCase().indexOf("uuid");
+                    if (index >= 0) {
+                        // 取出序列号并去除两边空格
+                        result = line.substring(index + "uuid".length() + 1).trim();
+                        break;
+                    }
                 }
             }
         } catch (IOException e) {
             LOGGER.error("获取Linux cpu信息错误 {}", e.getMessage());
-        } finally {
-            IoUtil.close(bufferedReader);
         }
         return result.trim();
     }
@@ -168,36 +234,30 @@ public class ServerInfoUtils {
      */
     private static String getWindowCpuSerial() {
         StringBuilder result = new StringBuilder(StringConstants.EMPTY);
-        File file = null;
-        BufferedReader input = null;
+        String vbs = """
+            Set objWMIService = GetObject("winmgmts:\\\\.\\root\\cimv2")
+            Set colItems = objWMIService.ExecQuery("Select * from Win32_Processor")
+
+            For Each objItem In colItems
+                WScript.Echo objItem.ProcessorId
+                Exit For ' do the first cpu only!
+            Next
+            """;
         try {
-            file = File.createTempFile("tmp", ".vbs");
-            file.deleteOnExit();
-            FileWriter fw = new FileWriter(file, StandardCharsets.UTF_8);
-            String vbs = """
-                Set objWMIService = GetObject("winmgmts:\\\\.\\root\\cimv2")
-                Set colItems = objWMIService.ExecQuery("Select * from Win32_Processor")
-
-                For Each objItem In colItems
-                    WScript.Echo objItem.ProcessorId
-                    Exit For ' do the first cpu only!
-                Next
-                """;
-            fw.write(vbs);
-            fw.close();
-
-            Process p = Runtime.getRuntime().exec("cscript //NoLogo " + file.getPath());
-            input = new BufferedReader(
-                new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8));
-            String line;
-            while ((line = input.readLine()) != null) {
-                result.append(line);
+            File file = createPrivateTempScript(".vbs", vbs);
+            Process p = new ProcessBuilder(getWindowsCscriptPath(), "//NoLogo", file.getPath())
+                .start();
+            try (BufferedReader input = new BufferedReader(
+                new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
+                String line;
+                while ((line = input.readLine()) != null) {
+                    result.append(line);
+                }
+            } finally {
+                FileUtil.del(file);
             }
         } catch (Exception e) {
             LOGGER.error("获取window cpu信息错误, {}", e.getMessage());
-        } finally {
-            IoUtil.close(input);
-            FileUtil.del(file);
         }
         return result.toString().trim();
     }
@@ -210,7 +270,8 @@ public class ServerInfoUtils {
     private static String getLinuxMainBoardSerial() {
         String command = "dmidecode | grep 'Serial Number' | awk '{print $3}' | tail -1";
         try {
-            Process process = new ProcessBuilder("sh", "-c", command).start();
+            // 使用绝对路径调用 shell，避免依赖可被篡改的 PATH 环境变量
+            Process process = new ProcessBuilder("/bin/sh", "-c", command).start();
             try (BufferedReader reader =
                 new BufferedReader(
                     new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
@@ -229,37 +290,30 @@ public class ServerInfoUtils {
      */
     private static String getWindowMainBoardSerial() {
         StringBuilder result = new StringBuilder(StringConstants.EMPTY);
-        File file = null;
-        BufferedReader input = null;
+        String vbs = """
+            Set objWMIService = GetObject("winmgmts:\\\\.\\root\\cimv2")
+            Set colItems = objWMIService.ExecQuery _
+               ("Select * from Win32_BaseBoard")
+            For Each objItem in colItems
+                Wscript.Echo objItem.SerialNumber
+                exit for  ' do the first cpu only!
+            Next
+            """;
         try {
-            file = File.createTempFile("realhowto", ".vbs");
-            file.deleteOnExit();
-            FileWriter fw = new FileWriter(file, StandardCharsets.UTF_8);
-
-            String vbs = """
-                Set objWMIService = GetObject("winmgmts:\\\\.\\root\\cimv2")
-                Set colItems = objWMIService.ExecQuery _
-                   ("Select * from Win32_BaseBoard")
-                For Each objItem in colItems
-                    Wscript.Echo objItem.SerialNumber
-                    exit for  ' do the first cpu only!
-                Next
-                """;
-
-            fw.write(vbs);
-            fw.close();
-            Process p = Runtime.getRuntime().exec("cscript //NoLogo " + file.getPath());
-            input = new BufferedReader(
-                new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8));
-            String line;
-            while ((line = input.readLine()) != null) {
-                result.append(line);
+            File file = createPrivateTempScript(".vbs", vbs);
+            Process p = new ProcessBuilder(getWindowsCscriptPath(), "//NoLogo", file.getPath())
+                .start();
+            try (BufferedReader input = new BufferedReader(
+                new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
+                String line;
+                while ((line = input.readLine()) != null) {
+                    result.append(line);
+                }
+            } finally {
+                FileUtil.del(file);
             }
         } catch (Exception e) {
             LOGGER.error("获取Window主板信息错误 {}", e.getMessage());
-        } finally {
-            IoUtil.close(input);
-            FileUtil.del(file);
         }
         return result.toString().trim();
     }
@@ -268,9 +322,9 @@ public class ServerInfoUtils {
      * <p>获取Mac地址</p>
      *
      * @return List&lt;String&gt; Mac地址
-     * @throws Exception 默认异常
+     * @throws SocketException 获取网络接口信息失败
      */
-    public static Set<String> getMacAddress() throws Exception {
+    public static Set<String> getMacAddress() throws SocketException {
         // 获取所有网络接口
         Set<InetAddress> inetAddresses = getLocalAllInetAddress();
         if (CollectionUtil.isNotEmpty(inetAddresses)) {
@@ -283,9 +337,9 @@ public class ServerInfoUtils {
      * <p>获取IP地址</p>
      *
      * @return List&lt;String&gt; IP地址
-     * @throws Exception 默认异常
+     * @throws SocketException 获取网络接口信息失败
      */
-    public static Set<String> getIpAddress() throws Exception {
+    public static Set<String> getIpAddress() throws SocketException {
         // 获取所有网络接口
         Set<InetAddress> inetAddresses = getLocalAllInetAddress();
         if (CollectionUtil.isNotEmpty(inetAddresses)) {
@@ -327,9 +381,9 @@ public class ServerInfoUtils {
      * <p>获取当前服务器所有符合条件的网络地址</p>
      *
      * @return List&lt;InetAddress&gt; 网络地址列表
-     * @throws Exception 默认异常
+     * @throws SocketException 获取网络接口信息失败
      */
-    private static Set<InetAddress> getLocalAllInetAddress() throws Exception {
+    private static Set<InetAddress> getLocalAllInetAddress() throws SocketException {
         Set<InetAddress> result = CollUtil.newHashSet();
         // 遍历所有的网络接口
         for (Enumeration<NetworkInterface> networkInterfaces =
